fix width percentage alignment

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ p {
     }
 
     #gmp1-process {
-        width: 100%;
+        width: 50%;
         background-image: url(https://i.imgur.com/XdsGzB4.jpg);
         height: 405px;
         background-position: center;
